--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "alexanderthegreat96/debugger-utility-alpha": "^1.0",
+        "caneara/axiom": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "mjaschen/phpgeo": "^4.2",
+        "stephenjude/default-model-sorting": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
