--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:yN7jjANsDFW8tcuC7I9g6VQcLqBnspX54qUVnPZjUXQ=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:9999
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=nanocharger
+DB_USERNAME=nanocharger
+DB_PASSWORD=nanocharger
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,9 +24,10 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=redis
+REDIS_PASSWORD=mypass
 REDIS_PORT=6379
+REDIS_CLIENT=predis
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
